deploy/monster-combat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: monster-combat
  name: combat
  namespace: ebullientworks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monster-combat
  template:
    metadata:
      labels:
        app: monster-combat
    spec:
      containers:
      - image: ebullient/dnd-monster-combat:latest
        imagePullPolicy: IfNotPresent
        name: combat
        ports:
        - containerPort: 8080
          name: spring-web
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: spring-web
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/liveness
            port: spring-web
          initialDelaySeconds: 40
